--- a/advent_of_code_2022/package.json
+++ b/advent_of_code_2022/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "console-apps",
+  "name": "advent_of_code_2022",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
   "author": "",
   "license": "MIT",
+  "description": "",
   "dependencies": {},
   "devDependencies": {
     "jest": "^29.7.0"
